 Otherwise indicated differently, all changes made by 
     Jelmer Vernooij.

Ctrlproxy 3.0.5 UNRELEASED

  IMPROVEMENTS
  
    * Integrate auto-away module into the core.

Ctrlproxy 3.0.4 UNRELEASED

  IMPROVEMENTS

    * Add ctrlproxy-admin command for command-line access to the admin network.

    * Send message to the client when ctrlproxy connects to the network.

    * Announce number of clients/channels during client login. (#162)

    * Add "set" command in the administration interface, including 
      initial settings "log_level", "motd-file" and "report-time". (#6)

    * Add "default-network" setting.

  BUG FIXES
    
    * Don't allow disconnect of admin network. (#164)

    * Clearer error messages during disconnect.

    * Handle ping timeouts from server. (#158)

    * Don't crash when network of listener goes away. (#168)

    * Don't abort when sending colon to listener. (#167)

    * Handle 263 response correctly.

    * Properly send non-data lines when using repl_lastdisconnect. (#146)

    * No longer "skip" users on reconnect. (#146)

    * Check for empty argument to /CTRLPROXY BACKLOG (#132)

    * Integrate some more standard replication backends. 

    * Allow specifying a network in the password, separated by a colon (:). 
      (#11)

    * Integrate listeners into the core.

    * Reconcile log_custom and log_irssi. (#114)

    * Integrate socks support into listener code. Socks connections 
      can now be accepted at the same port as other connections.

    * Allow configuring a single listener in ~/.ctrlproxy/config.

    * Several simplifications of the configuration file.

    * Recognize NS as command for NickServ (#145)

    * Start checking plugin versions.

    * Open log file if stdout goes away.

    * Make /AWAY with empty argument mark as unaway. (Adeodato Simó)

    * Automatically mark as unaway when a client connects and auto-away/no_client=true. (#150)

    * Add support for handling additional 005 parameters: HCN.
